--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -252,6 +252,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(128100,)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def create_features(img):\n",
+    "    # flatten three channel color image\n",
+    "    color_features = img.flatten()\n",
+    "    # convert image to greyscale\n",
+    "    grey_image = rgb2grey(img)\n",
+    "    # get HOG features from greyscale image\n",
+    "    hog_features = hog(grey_image, block_norm='L2-Hys', pixels_per_cell=(16, 16))\n",
+    "    # combine color and hog features into a single array\n",
+    "    flat_features = np.hstack((color_features, hog_features))\n",
+    "    return flat_features\n",
+    "\n",
+    "bombus_features = create_features(bombus)\n",
+    "\n",
+    "# print shape of bombus_features\n",
+    "# ... YOUR CODE FOR TASK 5 ...\n",
+    "bombus_features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
