create feature matrix

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -287,6 +287,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_feature_matrix(label_dataframe):\n",
+    "    features_list = []\n",
+    "    \n",
+    "    for img_id in label_dataframe.index:\n",
+    "        # load image\n",
+    "        img = get_image(img_id)\n",
+    "        # get features for image\n",
+    "        image_features = create_features(img)\n",
+    "        features_list.append(image_features)\n",
+    "        \n",
+    "    # convert list of arrays into a matrix\n",
+    "    feature_matrix = np.array(features_list)\n",
+    "    return feature_matrix\n",
+    "\n",
+    "# run create_feature_matrix on our dataframe of images\n",
+    "feature_matrix = create_feature_matrix(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
