scale fature matrix

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -313,6 +313,35 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature matrix shape is:  (500, 128100)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get shape of feature matrix\n",
+    "print('Feature matrix shape is: ', feature_matrix.shape)\n",
+    "\n",
+    "# define standard scaler\n",
+    "ss = StandardScaler()\n",
+    "# run this on our feature matrix\n",
+    "bees_stand = ss.fit_transform(feature_matrix)\n",
+    "\n",
+    "pca = PCA(n_components=500)\n",
+    "# use fit_transform to run PCA on our standardized matrix\n",
+    "bees_pca = pca.fit_transform(bees_stand)\n",
+    "# look at new shape\n",
+    "print('PCA matrix shape is: ', bees_pca.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
