scale fature matrix

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -311,14 +311,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature matrix shape is:  (500, 128100)\n"
+      "Feature matrix shape is:  (500, 128100)\n",
+      "PCA matrix shape is:  (500, 500)\n"
      ]
     }
    ],
