--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -2,6 +2,131 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# used to change filepaths\n",
+    "import os\n",
+    "\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import display\n",
+    "%matplotlib inline\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# import Image from PIL\n",
+    "from PIL import Image\n",
+    "\n",
+    "\n",
+    "\n",
+    "from skimage.feature import hog\n",
+    "from skimage.color import rgb2grey\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "# import train_test_split from sklearn's model selection module\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# import SVC from sklearn's svm module\n",
+    "\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "# import accuracy_score from sklearn's metrics module\n",
+    "from sklearn.metrics import roc_curve, auc, accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = pd.read_csv(\"datasets/labels.csv\", index_col=0)\n",
+    "\n",
+    "def get_image(row_id, root=\"datasets/images/train/\"):\n",
+    "    \"\"\"\n",
+    "    Converts an image number into the file path where the image is located, \n",
+    "    opens the image, and returns the image as a numpy array.\n",
+    "    \"\"\"\n",
+    "    filename = \"{}.jpg\".format(row_id)\n",
+    "    file_path = os.path.join(root, filename)\n",
+    "    img = Image.open(file_path)\n",
+    "    return np.array(img)\n",
+    "\n",
+    "\n",
+    "def create_features(img):\n",
+    "    # flatten three channel color image\n",
+    "    color_features = img.flatten()\n",
+    "    # convert image to greyscale\n",
+    "    grey_image = rgb2grey(img)\n",
+    "    # get HOG features from greyscale image\n",
+    "    hog_features = hog(grey_image, block_norm='L2-Hys', pixels_per_cell=(16, 16))\n",
+    "    # combine color and hog features into a single array\n",
+    "    flat_features = np.hstack((color_features, hog_features))\n",
+    "    return flat_features\n",
+    "\n",
+    "def create_feature_matrix(label_dataframe):\n",
+    "    features_list = []\n",
+    "    \n",
+    "    for img_id in label_dataframe.index:\n",
+    "        # load image\n",
+    "        img = get_image(img_id)\n",
+    "        # get features for image\n",
+    "        image_features = create_features(img)\n",
+    "        features_list.append(image_features)\n",
+    "        \n",
+    "    # convert list of arrays into a matrix\n",
+    "    feature_matrix = np.array(features_list)\n",
+    "    return feature_matrix\n",
+    "\n",
+    "# run create_feature_matrix on our dataframe of images\n",
+    "feature_matrix = create_feature_matrix(labels)\n",
+    "\n",
+    "# define standard scaler\n",
+    "ss = StandardScaler()\n",
+    "# run this on our feature matrix\n",
+    "bees_stand = ss.fit_transform(feature_matrix)\n",
+    "\n",
+    "pca = PCA(n_components=500)\n",
+    "# use fit_transform to run PCA on our standardized matrix\n",
+    "bees_pca = pca.fit_transform(bees_stand)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0    175\n",
+       "1.0    175\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(bees_pca,\n",
+    "                                                    labels.genus.values,\n",
+    "                                                    test_size=.3,\n",
+    "                                                    random_state=1234123)\n",
+    "\n",
+    "# look at the distrubution of labels in the train set\n",
+    "pd.Series(y_train).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
