--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -127,6 +127,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "    kernel='linear', max_iter=-1, probability=True, random_state=42,\n",
+       "    shrinking=True, tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# define support vector classifier\n",
+    "svm = SVC(kernel='linear', probability = True, random_state=42)\n",
+    "\n",
+    "# fit model\n",
+    "svm.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
