--- a/notebook2.ipynb
+++ b/notebook2.ipynb
@@ -154,6 +154,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model accuracy is:  0.66\n"
+     ]
+    }
+   ],
+   "source": [
+    "# generate predictions\n",
+    "y_pred = svm.predict(X_test)\n",
+    "\n",
+    "# calculate accuracy\n",
+    "accuracy = accuracy_score(y_test,y_pred)\n",
+    "print('Model accuracy is: ', accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
